am facut meniul

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             >
           </li>
           <li>
-            <a href="./Totusi-Iubirea.html">Toși, Iubirea - Adrian Păunescu</a>
+            <a href="./Totusi-Iubirea.html">Toși, iubirea - Adrian Păunescu</a>
           </li>
           <li>
-            <a href="./Din-parul-tau.html">Din Părul Tău - Lucian Blaga</a>
+            <a href="./Din-parul-tau.html">Din părul tău - Lucian Blaga</a>
           </li>
           <li>
             <a href="./Eu-nu-strivesc-corola-de-minuni-a-lumii.html"
