--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <ul class="links">
           <li>
             <a href="./Lectia-Despre-Cub.html"
-              >Lectia despre Cub - Nichita Stănescu</a
+              >Lectia despre cub - Nichita Stănescu</a
             >
           </li>
           <li>
             <a href="./Iubiti-va-pe-tunuri.html"
-              >Iubiți-vă pe Tunuri - Adrian Păunescu</a
+              >Iubiți-vă pe tunuri - Adrian Păunescu</a
             >
           </li>
           <li>
