main page changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <title>Librărie De Poezii Online</title>
+  <title>Librarie de poezii</title>
   <link rel="icon" type="image/x-icon" href="./resurse/mini-picture.jpg" />
   <link rel="stylesheet" href="styles.css" />
 
@@ -15,36 +15,50 @@
     href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap"
     rel="stylesheet"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap"
+    rel="stylesheet"
+  />
 
   <body>
     <div class="prezentare">
       <div class="stanga">
-        <div class="poza">
-          <img src="./resurse/mini-picture.jpg" alt="un manuscris" />
+        <div id="poza">
+          <img src="./resurse/mini-picture.jpg" alt="manuscris" />
         </div>
         <ul class="links">
           <li>
-            <a href="./Lectia-Despre-Cub.html"
+            <a href="./Lectia-Despre-Cub.html" class="buton"
               >Lectia despre cub - Nichita Stănescu</a
             >
           </li>
           <li>
-            <a href="./Iubiti-va-pe-tunuri.html"
+            <a href="./Iubiti-va-pe-tunuri.html" class="buton"
               >Iubiți-vă pe tunuri - Adrian Păunescu</a
             >
           </li>
           <li>
-            <a href="./Totusi-Iubirea.html">Toși, iubirea - Adrian Păunescu</a>
+            <a href="./Totusi-Iubirea.html" class="buton"
+              >Toși, iubirea - Adrian Păunescu</a
+            >
           </li>
           <li>
-            <a href="./Din-parul-tau.html">Din părul tău - Lucian Blaga</a>
+            <a href="./Din-parul-tau.html" class="buton"
+              >Din părul tău - Lucian Blaga</a
+            >
           </li>
           <li>
-            <a href="./Eu-nu-strivesc-corola-de-minuni-a-lumii.html"
+            <a
+              href="./Eu-nu-strivesc-corola-de-minuni-a-lumii.html"
+              class="buton"
               >Eu nu strivesc corola de minuni a lumii - Lucian Blaga</a
             >
           </li>
-          <li><a href="./Glossa.html">Glossă - Mihai Eminescu</a></li>
+          <li>
+            <a href="./Glossa.html" class="buton">Glossă - Mihai Eminescu</a>
+          </li>
         </ul>
       </div>
       <div class="centru">
@@ -59,24 +73,17 @@
 
           <i>Camil Petrescu&nbsp;&nbsp;</i>
         </div>
-
-        <div id="slideshow">
-          <div class="slide-wrapper">
-            <div class="slide">
-              <img class="slide-photo" src="./resurse/poza1.jpg" alt="" />
-            </div>
-            <div class="slide">
-              <img class="slide-photo" src="./resurse/poza2.jpg" alt="" />
-            </div>
-            <div class="slide">
-              <img class="slide-photo" src="./resurse/poza3.jpg" alt="" />
-            </div>
-            <div class="slide">
-              <img class="slide-photo" src="./resurse/poza4.jpg" alt="" />
-            </div>
+        <div class="container">
+          <div class="wrapper">
+            <img src="./resurse/poza4.jpg" />
+            <img src="./resurse/poza5jpg.webp" />
+            <img src="./resurse/poza3.jpg" />
+            <img src="./resurse/poza6.jpg" />
+            <img src="./resurse/poza4.jpg" />
           </div>
         </div>
       </div>
     </div>
+    <div class="footer">Proiect realizat de Roman Radu-Ioan! ✏️</div>
   </body>
 </html>
