--- a/Lectia-Despre-Cub.html
+++ b/Lectia-Despre-Cub.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <title>Lectia despre cub</title>
-  <link
-    rel="icon"
-    type="image/x-icon"
-    href="./resurse/mini-picture.jpg"
-  />
+  <link rel="icon" type="image/x-icon" href="./resurse/mini-picture.jpg" />
   <link rel="stylesheet" href="style.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,28 +25,26 @@
   <body>
     <a href="./index.html">HOME</a>
     <div class="prezentare">
-     <div class="titlu">   
-      <h1>Lectia despre cub <br></h1>
-     
-      <i>de Nichita Stănescu&nbsp;&nbsp;</i>
-     </div>
-     <p>
-        Se ia o bucată de piatră,<br>
-se ciopleşte cu o daltă de sânge,<br>
-se lustruieşte cu ochiul lui Homer,<br>
-se răzuieşte cu raze<br>
-până cubul iese perfect.<br>
-După aceea se sărută de numărate ori cubul<br>
-cu gura ta, cu gura altora<br>
-şi mai ales cu gura infantei.<br>
-După aceea se ia un ciocan<br>
-şi brusc se fărâmă un colţ de-al cubului.<br>
-Toţi, dar absolut toţi zice-vor:<br>
-- Ce cub perfect ar fi fost acesta<br>
-de n-ar fi avut un colţ sfărâmat!<br>
+      <div class="titlu">
+        <h1>Lectia despre cub <br /></h1>
 
-     </p>
+        <i>de Nichita Stănescu&nbsp;&nbsp;</i>
+      </div>
+      <p>
+        Se ia o bucată de piatră,<br />
+        se ciopleşte cu o daltă de sânge,<br />
+        se lustruieşte cu ochiul lui Homer,<br />
+        se răzuieşte cu raze<br />
+        până cubul iese perfect.<br />
+        După aceea se sărută de numărate ori cubul<br />
+        cu gura ta, cu gura altora<br />
+        şi mai ales cu gura infantei.<br />
+        După aceea se ia un ciocan<br />
+        şi brusc se fărâmă un colţ de-al cubului.<br />
+        Toţi, dar absolut toţi zice-vor:<br />
+        - Ce cub perfect ar fi fost acesta<br />
+        de n-ar fi avut un colţ sfărâmat!<br />
+      </p>
     </div>
-   
   </body>
 </html>
