--- a/Iubiti-va-pe-tunuri.html
+++ b/Iubiti-va-pe-tunuri.html
@@ -81,59 +81,236 @@
         Înclusiv dragostea unui poet<br />
         Citită în cărţile lui.<br />
         <br />
-        Nici Biblia nu foloseşte,<br>
-Nici Biblia n-are un conţinut exemplar,<br>
-Experienţa din Cântarea Cântărilor<br>
-Se pierde ca un proces verbal de şedintă,<br>
-Nu e nimic de făcut,<br>
-Nu e nimic de ales<br>
-Din toate acele cuvinte,<br>
-Decât plăcerea estetică.<br>
-<br>
-Eu simt autorul tragediei,<br>
-Eu declam împreună cu actorii,<br>
-Eu fac fibrilaţie la inimă odată cu regizorii,<br>
-Eu aplaud şi huidui împreună cu spectatorii,<br>
-Eu mă spânzur împreună cu administratorul teatrului<br>
-În acest final de veac<br>
-În care dragostea<br>
-A ajuns atât de prost vandabilă.<br>
-<br>
-Se joacă, dragii mei,<br>
-Tragedia dragostei<br>
-În faţa scaunelor goale.<br>
-Murim şi nimeni nu se uită la noi,<br>
-Actorii turbează pe scândura goală<br>
-Şi poate că de-atâta singurătate<br>
-În sălile în care joacă<br>
-Ei încep să ia în serios<br>
-Rolurile din tragedia dragostei.<br>
-<br>
-N-a fost chip să scap de aceste cuvinte,<br>
-A trebuit să vi le spun,<br>
-Gelos pe Shakespeare<br>
-Care a avut răbdarea<br>
-Să-şi omoare toţi eroii,<br>
-Știind<br>
-Că va fi absolvit de marea lui vină<br>
-Pentru că, între timp, oricum,<br>
-Toţi aveau să moară,<br>
-De moarte firească.<br>
-<br>
-Dar eu sunt poet liric,<br>
-Eu încă n-am deprins învăţul<br>
-De-a pune la persoana a treia<br>
-Ceea ce devoră persoana întâi<br>
-Şi de-atâtea ori am simţit nevoia<br>
-Să mă salvez cu un plural al majestăţii<br>
-Şi n-am putut, şi unii dintre voi<br>
-Au numit, prosteşte,<br>
-Aceasta care mi s-a întâmplat,<br>
-Egoism.<br>
-<br>
-
-
-
+        Nici Biblia nu foloseşte,<br />
+        Nici Biblia n-are un conţinut exemplar,<br />
+        Experienţa din Cântarea Cântărilor<br />
+        Se pierde ca un proces verbal de şedintă,<br />
+        Nu e nimic de făcut,<br />
+        Nu e nimic de ales<br />
+        Din toate acele cuvinte,<br />
+        Decât plăcerea estetică.<br />
+        <br />
+        Eu simt autorul tragediei,<br />
+        Eu declam împreună cu actorii,<br />
+        Eu fac fibrilaţie la inimă odată cu regizorii,<br />
+        Eu aplaud şi huidui împreună cu spectatorii,<br />
+        Eu mă spânzur împreună cu administratorul teatrului<br />
+        În acest final de veac<br />
+        În care dragostea<br />
+        A ajuns atât de prost vandabilă.<br />
+        <br />
+        Se joacă, dragii mei,<br />
+        Tragedia dragostei<br />
+        În faţa scaunelor goale.<br />
+        Murim şi nimeni nu se uită la noi,<br />
+        Actorii turbează pe scândura goală<br />
+        Şi poate că de-atâta singurătate<br />
+        În sălile în care joacă<br />
+        Ei încep să ia în serios<br />
+        Rolurile din tragedia dragostei.<br />
+        <br />
+        N-a fost chip să scap de aceste cuvinte,<br />
+        A trebuit să vi le spun,<br />
+        Gelos pe Shakespeare<br />
+        Care a avut răbdarea<br />
+        Să-şi omoare toţi eroii,<br />
+        Știind<br />
+        Că va fi absolvit de marea lui vină<br />
+        Pentru că, între timp, oricum,<br />
+        Toţi aveau să moară,<br />
+        De moarte firească.<br />
+        <br />
+        Dar eu sunt poet liric,<br />
+        Eu încă n-am deprins învăţul<br />
+        De-a pune la persoana a treia<br />
+        Ceea ce devoră persoana întâi<br />
+        Şi de-atâtea ori am simţit nevoia<br />
+        Să mă salvez cu un plural al majestăţii<br />
+        Şi n-am putut, şi unii dintre voi<br />
+        Au numit, prosteşte,<br />
+        Aceasta care mi s-a întâmplat,<br />
+        Egoism.<br />
+        <br />
+        Şi nici nu am blestemata<br />
+        Răceala de cuget<br />
+        A şefului de cadre<br />
+        Care iubeşte-n taină<br />
+        În vreme ce acţionează<br />
+        Cu dosare şi referinţe de tot felul<br />
+        Împotriva tuturor iubirilor şi a tuturor celor<br />
+        Care iubesc.<br />
+        <br />
+        Dragostea mea are un aspect<br />
+        Aproape clasic,<br />
+        În romantismul ei<br />
+        Desuet şi expresionist.<br />
+        Iubesc<br />
+        În numele tuturor umilinţelor<br />
+        Şi al tuturor aşa-ziselor fărădelegi pedepsite<br />
+        De legi fără de lege.<br />
+        <br />
+        Vai, mie, autor de tragedii,<br />
+        O s-ajung exemplar, o să se predea<br />
+        Lecţii de literatură universală<br />
+        Pe textele mele,<br />
+        Biată autopsie,<br />
+        Vinovată şi impudică autopsie,<br />
+        Câți din voi, care vă veţi supăra pe copii voştri<br />
+        C-au luat note mici<br />
+        La lecţia „Poezia lui Adrian Păunescu"<br />
+        N-aţi fi azi în stare<br />
+        Să mă ucideţi<br />
+        Pentru poezia de dragoste<br />
+        La care nu copii voştri, ci voi aţi putea rămâne repetenţi.<br />
+        <br />
+        Vă voi trece clasa,<br />
+        Pe voi şi pe femeile voastre,<br />
+        În faţa cărora îngenunchez<br />
+        Pentru sfânta răbdare pe care o au cu noi<br />
+        Şi pentru misteru1 care ne leagă.<br />
+        Vă voi trece clasa, vă voi trece veacul,<br />
+        Veţi supravieţui în poezia mea,<br />
+        Şi poate mai mult în pozia mea de dragoste<br />
+        Care nu e reglementată<br />
+        Prin hotărârea Consiliului de Miniştri.<br />
+        O, bieţii mei prieteni!<br />
+        <br />
+        Scriu poezie de dragoste<br />
+        Şi ştiu că n-am nicio şansă<br />
+        În timpul vieţii mele.<br />
+        Sunt făcut să par altceva,<br />
+        Suport interdictia de a vă fi unul din semeni,<br />
+        Teatral uneori,<br />
+        Pentru că-n clădirea teatrului nostru<br />
+        A ascuns armata<br />
+        Toata muniţia, toate drapelele.<br />
+        Teatral uneori,<br />
+        Pentru că în oraşul nostru<br />
+        Nu mai e loc nicăieri altundeva de poeţi<br />
+        Întrucât primaria e plina de funcţionari.<br />
+        <br />
+        Teatral, teatral, într-adevăr,<br />
+        Şi rugându-vă,<br />
+        Implorându-vă,<br />
+        Ordonându-vă:<br />
+        Pace şi dragoste,<br />
+        Şi dacă sunt pe lume şi dragostea, şi pacea,<br />
+        Va fi şi Truda de-a le păstra.<br />
+        Bucuraţi-vă că mai aveţi<br />
+        Poeti din acest os,<br />
+        Păsări de această marcă,<br />
+        Impulsuri în această direcţie.<br />
+        Bucuraţi-vă, bucuraţi-vă, plângând,<br />
+        Că în vreme ce voi mă credeaţi surghiunit<br />
+        În sintaxa unei singure orientari,<br />
+        Să lucrez ca orbetele<br />
+        Pentru înfăţişarea voastră festivă,<br />
+        Eu iubeam şi scriam<br />
+        Poezie de dragoste.<br />
+        <br />
+        Iar pe voi, fraţii mei tineri,<br />
+        Pe voi, care mă veţi ciţi crezând<br />
+        Că veţi avea ceva de învăţat din poezia mea de dragoste<br />
+        Vă rog, nu pariaţi prea mult<br />
+        Pe această iluzie.<br />
+        <br />
+        Nimic nu se învaţă de la nimeni<br />
+        Până când nu înveţi acel lucru<br />
+        Din propria ta experienţă.<br />
+        Voi mă veţi iubi<br />
+        Abia după ce<br />
+        Veţi ajunge-n situaţia mea.<br />
+        <br />
+        Poezia mea nu e de dragoste, ea e dragoste,<br />
+        Poezia mea de dragoste nu e iniţiere,<br />
+        În versurile mele nu veţi găsi<br />
+        Descrise somptuos<br />
+        Poziţiile dragostei<br />
+        Ca-n manualele de pornografie indiană<br />
+        Sau chiar daneză.<br />
+        O, nu. Toată poezia mea de dragoste<br />
+        E o imensă vatră de cenuşă<br />
+        La temelia unui rug<br />
+        Ce arde încă.<br />
+        Luaţi această carte-n mâini,<br />
+        Această machetă a unui teatru tragic,<br />
+        Iubirea e tragică,<br />
+        Pentru că iubirea e moarte,<br />
+        Iubirea e tragică,<br />
+        Pentru că actorii o rostestesc cu suflarea tăiată,<br />
+        Măreaţă cum e<br />
+        În scriitura pe care au învăţat-o,<br />
+        Dar abia aşteaptă să coboare<br />
+        După ce şi-au îmbrăcat hainele de stradă<br />
+        În fierbintea, urâta, dar pasionata lor<br />
+        Iubire de oameni.<br />
+        În sală pe fiecare-l aşteaptă-o femeie,<br />
+        Undeva, la balcon, o fată pură plânge<br />
+        Când iubitul ei, actor la Teatrul municipal,<br />
+        Se sărută pe scenă cu o actriţă.<br />
+        Vai, eterna contradicţie<br />
+        Dintre artă şi viaţă!<br />
+        <br />
+        Nu vă luaţi după spusele mele, ci după cele scrise,<br />
+        Citiţi cartea mea<br />
+        Când viaţa v-a obosit de-ajuns într-o zi,<br />
+        Eu nu am pretenţia să vă învăţ nimic,<br />
+        N-am decât orgoliul de-a mă alătura<br />
+        Cu toată cenuşa distrugerii mele<br />
+        Cenuşilor voastre,<br />
+        Căci fiecare dintre voi<br />
+        E un cuplu<br />
+        De la care ar putea începe<br />
+        Iarăşi Lumea.<br />
+        <br />
+        Şi când veţi vedea <br />
+        În faţa ochilor voştri arzând de iubire<br />
+        Tunurile veacului pregătindu-se să distrugă<br />
+        Câmpiile şi fabricile,<br />
+        Oamenii şi munţii,<br />
+        Păsările şi peştii,<br />
+        Bibliotecile şi spitalele,<br />
+        Mormintele şi bisericile,<br />
+        Nu pregetaţi, aruncaţi-vă hainele de pe voi,<br />
+        Îmbrăţişaţi-vă, sărutaţi-vă,<br />
+        Şi pentru că pământul e rece<br />
+        Iar tunurile care vor să-l distrugă sunt calde,<br />
+        O, voi, tineri ai planetei mele<br />
+        Convulsionată de-atâtea arme,<br />
+        Sub ochii holbaţi ai armatelor,<br />
+        Sfărâmând ochelarii greţoşi ai generalilor,<br />
+        Fără nici o ruşine,<br />
+        În numele singurei religii care ne uneşte,<br />
+        Credinţa în continuitatea speciei umane,<br />
+        Iubiţi-vă,<br />
+        Iubiţi-vă pe tunuri!<br />
+        Concediaţi tunarii<br />
+        Şi dezamorsaţi obuzele<br />
+        Şi daţi-ne acest prim şi netrecător<br />
+        Semn al păcii universale.<br />
+        <br />
+        Iubiţi-vă,<br />
+        Iubiţi-vă pe tunuri!<br />
+        Iubiţi-vă până le veţi hodorogi,<br />
+        Până le veţi scoate din funcţiune,<br />
+        Iubiţi-vă aruncând din mâini<br />
+        Tot ce vi se-ntâmplă s-aveţi în mâini,<br />
+        Actele voastre, banii voştri, oglinzile,<br />
+        Chiar şi această carte care nu are decât meritul<br />
+        Că aparţine unui om<br />
+        Care în viaţa lui, deşi n-a avut norocul<br />
+        Să facă dragoste pe nici un tun,<br />
+        Când n-a dormit şi n-a scris,<br />
+        A iubit<br />
+        Cu disperarea condiţiei umane,<br />
+        Cu lacomia venitului de pe front,<br />
+        Cu grija medicului<br />
+        Şi cu dăruirea muribundului.<br />
+        <br />
+        Facă-se profeţia mea,<br />
+        Fie o dată pentru totdeauna a tinerilor<br />
+        Iubirea pe tunuri!<br />
+        <br />
       </p>
     </div>
   </body>
