--- a/Eu-nu-strivesc-corola-de-minuni-a-lumii.html
+++ b/Eu-nu-strivesc-corola-de-minuni-a-lumii.html
@@ -28,7 +28,7 @@
       <div class="titlu">
         <h1>Eu nu strivesc corola de minuni a lumii<br /></h1>
 
-        <i>Lucian Blaga&nbsp;&nbsp;</i>
+        <i>de Lucian Blaga&nbsp;&nbsp;</i>
       </div>
       <p>
         Eu nu strivesc corola de minuni a lumii<br>
