--- a/Glossa.html
+++ b/Glossa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <title>Din părul tău</title>
+  <title>Glossă</title>
   <link rel="icon" type="image/x-icon" href="./resurse/mini-picture.jpg" />
   <link rel="stylesheet" href="style.css" />
 
@@ -26,9 +26,9 @@
     <a href="./index.html">HOME</a>
     <div class="prezentare">
       <div class="titlu">
-        <h1>Din părul tău<br /></h1>
+        <h1>Glossă<br /></h1>
 
-        <i>de Lucian Blaga&nbsp;&nbsp;</i>
+        <i>de Mihai Eminescu&nbsp;&nbsp;</i>
       </div>
       <p>
         <i
